fix: fixed a bug with overlapping the entire screen when pausing

--- a/src/styles/layout/game.scss
+++ b/src/styles/layout/game.scss
@@ -1,7 +1,9 @@
 .game {
+    position: relative;
     max-width: 1440px;
     margin: 33px auto 0 auto;
     padding: 27px;
+    padding-bottom: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
